# multi_agent_system_project

./: .env.example  .gitignore  .pre-commit-config.yaml  ARTICLE.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
src/: __init__.py  config.py  main.py
src/agents/: __init__.py  base_agent.py  data_collector.py  export_agent.py  insight_agent.py  planner_agent.py  report_agent.py  supervisor_agent.py
src/agents/prompts/: __init__.py  insight_agent_prompts.py  planner_agent_prompts.py  report_agent_prompts.py
src/agents/utils/: __init__.py  data_collection_helpers.py  report_parser.py
src/exceptions/: __init__.py  base.py  collector_error.py  validation_error.py  workflow_error.py
src/graph/: __init__.py  state.py  state_utils.py  workflow.py
src/graph/nodes/: __init__.py  base_node.py  data_collector_node.py  export_node.py  insight_node.py  planner_node.py  report_node.py  retry_node.py  supervisor_node.py
src/graph/validators/: __init__.py  base_validator.py  collector_validator.py  data_consistency_validator.py  insight_validator.py  report_validator.py
src/models/: __init__.py  competitor_profile.py  insight_model.py  pdf_branding_config.py  pdf_layout_config.py  plan_model.py  report_model.py
src/template/: __init__.py  cover_page.py  header_footer.py  markdown_converter.py  markdown_parser.py  pdf_formatter.py  pdf_generator.py  pdf_styles.py  pdf_utils.py  style_utils.py  template_engine.py
src/tools/: __init__.py  base_tool.py  query_generator.py  scraper.py  text_utils.py  web_search.py
src/utils/: __init__.py  agent_logger.py  input_validator.py  llm_cache.py  metrics.py  rate_limiter.py  state_storage.py
tests/: __init__.py  conftest.py  test_agent_logger.py  test_agents.py  test_async_agents.py  test_base_node.py  test_config.py  test_data_collection_helpers.py  test_exceptions.py  test_input_validator.py  test_llm_cache.py  test_main.py  test_metrics.py  test_models.py  test_nodes.py  test_rate_limiter.py  test_report_parser.py  test_state.py  test_state_storage.py  test_state_utils.py  test_template.py  test_tools.py  test_validators.py  test_workflow.py
tests/fixtures/: __init__.py  sample_data.py
tests/integration/: __init__.py  test_full_workflow.py  test_pdf_export.py
